--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,18 +1,20 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-rational-order",
+    "stylelint-config-rational-order"
   ],
   "plugins": [
     "stylelint-order",
     "stylelint-config-rational-order/plugin"
   ],
   "rules": {
+    "string-quotes": "single",
     "declaration-empty-line-before": null,
     "order/properties-order": [],
     "plugin/rational-order": [true, {
       "border-in-box-model": true,
-      "empty-line-between-groups": true,
+      "empty-line-between-groups": true
     }]
   }
+
 }
